			SWI-Prolog ChangeLog
			====================

  * FIXED: string_to_list(-String, +List) crash on machines with
    signal-based stack-expansion with lists of >500,000 elements
    (Wouter Jansweijer).

  * ADDED: Borland C compatibility in the SWI-Prolog header files.
    Additional information using SWI-Prolog with BC is in
    http://gollem.swi.psy.uva.nl/twiki/pl/bin/view/Foreign/BorlandC
    By Gerhard Wolfstieg.

  * MODIFIED: More improved classical I/O compatibility in telling/1
    and seeing/1.  Peter Dadam.

  * FIXED: Source-level debugger: be aware that clauses holding floats
    that are written and read-back may not unify exactly due to float
    rounding errors.

  * FIXED: quoted write to write floats using decimal dot or exponent,
    regardless of the float-format in effect.

  * ENHANCED: Skip intermediate system-predicates when walking `up' in
    the source-level debugger.

  * ENHANCED: Clear source-location on close/1 of the file currently
    holding it.

  * ADDED: allow for swapped 2nd/3th argument in absolute_file_name/3.

  * MODIFIED: relative_to(FileOrDir) to assume the relative-to is a 
    directory if nothing is known about it (Nikolaos Angelopoulos).

  * FIXED: Some manual typos (Nikolaos Angelopoulos).

  * FIXED: GC/GUI-Tracer crash related to the compilation of \+ if the
    argument contains non-singleton variables that appear nowhere else
    in the clause and in the argument of a compound term.  Thanks to
    Sergey Tikhonov for providing a neat small crash-demo!

  * FIXED: working_directory/2 to raise a proper exception if it can't
    get the working directory (crashed).

  * FIXED: MT: lookup/register/unregister atom mutex mismatch.
    Sergey Tikhonov.

VERSION 5.0.6 (May 21, 2002)
============================

  * ADDED: absolute_file_name/3 file-type `source' and option relative_to
    for easier compatibility to SICStus (who changes the argument-order as
    well). Nikolaos Angelopoulos.
